fixed malalignment issues in alefba

--- a/src/alefba-src/src/stylesheets/main-section.scss
+++ b/src/alefba-src/src/stylesheets/main-section.scss
@@ -53,7 +53,7 @@
   color: #FF6200;
   height:5.555555555555555vh;
   width:17.96875vw;
-  margin-top: 20vw;
+  margin-top: 23vw;
   margin-right:10.9375vw;
   margin-left:71.875vw;
   position: absolute;
@@ -73,7 +73,7 @@
 #white-text{
   color: white;
   position: absolute;
-  margin-top: 25vw;
+  margin-top: 28vw;
   margin-right:10.15vw;
   margin-left:66.3vw;
   font-style: normal;
